<resources>
    <string name="applicationName">همراه فروشگاه اتکا</string>
    <string name="home">خانه</string>
    <string name="search">جستجو</string>
    <string name="searchCategory">جستجوی دسته بندی...</string>
    <string name="map">نقشه</string>
    <string name="profile">پروفایل</string>
    <string name="registerWithyourEmail">با ایمیل خود ثبت نام کنید</string>
    <string name="ifRegisteredThenLogin">اگر کارت باشگاه مشتریان اتکا دارید و یا قبلا ثبت نام کرده اید، وارد شوید</string>
    <string name="performSearchLikeChamran">جستجو کنید... مثلا چمران</string>
    <string name="performSearchLikeGreenTea">جستجو کنید... مثلا چای سبز</string>
    <string name="sorting">مرتب سازی</string>
    <string name="filtering">فیلتر کردن</string>
    <string name="brandOrdered">بر اساس برند</string>
    <string name="topRate">بیشترین امتیاز</string>
    <string name="topOffer">بیشترین تخفیف(فروش ویژه)</string>
    <string name="lowestPrice">کمترین قیمت</string>
    <string name="newest">جدید ترین</string>
    <string name="profileBarcodeMessage">برای دریافت امتیاز اقلام موجود در سبد خرید خود، پس از پرداخت مبلغ، بارکد زیر را به صندوق دار ارائه دهید</string>
    <string name="profileConvertRateMessage">شما می توانید اعتبار کارت باشگاه مشتریان خود را به مبلغی متناسب با امتیاز خود افزایش داده و در خرید بعدی از آن استفاده کنید</string>
    <string name="resetPassword">بازگردانی رمز عبور</string>
    <string name="custumerClubCardNumber">شماره کارت باشگاه مشتریان</string>
    <string name="mobilePhoneNumber">شماره موبایل</string>
    <string name="yourEmailAddress">آدرس ایمیل شما</string>
    <string name="send">ارسال</string>
    <string name="enter">ورود</string>
    <string name="registerOrLogin">ورود یا ثبت نام</string>
    <string name="iHaveEtkaClubCard">کارت باشگاه مشتریان اتکا دارم</string>
    <string name="notRegistered_registerNow">هنوز عضو نیستید؟ ثبت نام کنید</string>
    <string name="forgotYourPassword_resetNow">رمز عبور خود را فراموش کرده اید؟ بازگردانی رمز عبور</string>
    <string name="register">ثبت نام</string>
    <string name="ifRegisteredOrHaveClubCardThenLogin">اگر کارت باشگاه مشتریان اتکا دارید و یا قبلا ثبت نام کرده اید، وارد شوید</string>
    <string name="withRegisterInApplicationYouAcceptPolicyAndLicense">با ثبت نام در اپلیکیشن، شما شرایط استفاده را پذیرفته و قوانین و مقررات را مطالعه کرده اید.</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="passwort_atLeast8Char">رمز عبور (حد اقل ۸ کاراکتر)</string>
    <string name="presenterCode">کد معرف (اختیاری)</string>
    <string name="cardPassword">رمز عبور کارت</string>
    <string name="nextShoppingList">لیست خرید بعدی</string>
    <string name="loadShopFactor">بارگزاری فاکتور خرید</string>
    <string name="yourShoppingHistory">سابقه خریدهای شما</string>
    <string name="inviteFriends">دعوت از دوستان</string>
    <string name="faq">سوالات متداول</string>
    <string name="ticketsAndSendProductRequest">تیکت و درخواست کالا</string>
    <string name="youHaveXScore">شما %d امتیاز دارید.</string>
    <string name="score5">۵ امتیاز</string>
    <string name="editProfileInfo">ویرایش اطلاعات کاربری</string>
    <string name="otherPages">سایر صفحات</string>
    <string name="profileSetting">تنظیمات حساب کاربری</string>
    <string name="yourScore">امتیاز شما</string>
    <string name="sendNewRequest">ارسال درخواست جدید</string>
    <string name="support">پشتیبانی</string>
    <string name="ticket">تیکت</string>
    <string name="inviteFriendsHeaderMessage">کافیست دوستانتان با کد معرف شما در اپلیکیشن همراه فروشگاه اتکا ثبت نام کنند تا شما به ازای هر یک، ۱۰ امتیاز در باشگاه دریافت کنید.</string>
    <string name="yourInvitationCode_endWithColon">کد معرف شما:</string>
    <string name="sharing">اشتراک گذاری</string>
    <string name="aboutEtkaStores">درباره شرکت فروشگاه های زنجیره ای اتکا</string>
    <string name="userPrivacy">حریم خصوصی کاربران</string>
    <string name="termAndConditions">شرایط، قوانین و مقررات استفاده</string>
    <string name="otherPagesFooterLicense">استفاده از تمامی مطالب اپلیکیشن همراه فروشگاه اتکا فقط برای مقاصد غیر تجاری و با ذکر منبع بلامانع است. کلیه حقوق این سرویس متعلق به شرکت فروشگاه های زنجیره ای اتکا می باشد.</string>
    <string name="copyrightEn">Copyright ® 2018-2019 Etkastores.ir</string>
    <string name="firstNameAndLastName">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="gender">جنسیت</string>
    <string name="education">تحصیلات</string>
    <string name="birthDate">تاریخ تولد</string>
    <string name="get20ScoreWithCompletingProfileInfo">با تکمیل اطلاعات کاربری ۲۰ امتیاز دریافت می کنید</string>
    <string name="changePassword">تغییر رمز عبور</string>
    <string name="receiveSpecialOffersNotifications">دریافت اعلان های فروش ویژه</string>
    <string name="hekmatOffersNotifications">دریافت اعلان های طرح حکمت</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="profileInfo">اطلاعات کاربری</string>
    <string name="edit">ویرایش</string>
    <string name="requests">درخواست ها</string>
    <string name="sendByYou">ارسالی از شما:</string>
    <string name="etkaReply">پاسخ اتکا:</string>
    <string name="contactUs">تماس با ما</string>
    <string name="youContactUsByFollowingMethods">شما کاربران گرامی می توانید از طریق یکی از روش های زیر با ما در تماس باشید.</string>
    <string name="directCallToEtkaPR">تماس مستقیم با مرکز ارتباط با مشتریان اتکا</string>
    <string name="sendEmail">ارسال ایمیل</string>
    <string name="webSite">وب سایت</string>
    <string name="youCanIncreaseYourCardClubeCashByFollowingMethods">شما می توانید به یکی از حالت های زیر اعتبار کارت باشگاه مشتریان خود را افزایش داده و در خرید بعدی از آن استفاده کنید.</string>
    <string name="saveChanges">ذخیره تغییرات</string>
    <string name="inLogin">در حال ورود به حساب کاربری...</string>
    <string name="inSendingData">در حال ارسال اطلاعات...</string>
    <string name="inSendingRequest">در حال ارسال درخواست...</string>
    <string name="contactToBranch">تماس با شعبه</string>
    <string name="showDirections">نمایش مسیرها</string>
    <string name="share">اشتراک گذاری</string>
    <string name="inStoreMap">نقشه‌داخل‌شعبه</string>
    <string name="nationalCode">کد ملی</string>
    <string name="forYou">برای‌شما</string>
    <string name="specialOffers">پرفروشترین‌ها</string>
    <string name="hekmatWares">کالاهای‌طرح‌حکمت</string>
    <string name="availableHekmatWaresInStore">کالاهای طرح حکمت موجود در شعبه:</string>
    <string name="etkaٰExclusiveWares">کالاهای‌انحصاری‌اتکا</string>
    <string name="firstNameCantBeEmpty">نام نباید خالی باشد!</string>
    <string name="lastNameCantBeEmpty">نام خانوادگی نباید خالی باشد!</string>
    <string name="emailAddresCantBeEmpty">آدرس ایمیل نباید خالی باشد!</string>
    <string name="passwordCantBeEmpty">رمز عبور نباید خالی باشد!</string>
    <string name="inRegistering">در حال ثبت نام...</string>
    <string name="registerSuccessful">ثبت نام با موفقیت انجام شد.</string>
    <string name="registerFailTryLater">خطایی در ثبت نام رخ داده است، لطفا دوباره تلاش کنید.</string>
    <string name="hekmatCard">حکمت کارت</string>
    <string name="hekmatCardTest">حکمت کارت (نسخه آزمایشی)</string>
    <string name="totalPrice">قیمت کل:</string>
    <string name="errorInLoginTryLater">خطا در ورود به حساب کاربری، دوباره تلاش کنید</string>
    <string name="factorDate">تاریخ خرید: %s</string>
    <string name="factorCode">شماره فاکتور: %d</string>
    <string name="XProducts">%d قلم کالا</string>
    <string name="Xpoint">%s امتیاز</string>
    <string name="priceX">قیمت : %s</string>
    <string name="price">قیمت</string>
    <string name="anErrorHappend">خطایی رخ داده است!</string>
    <string name="errorInLogin">خطا در ورود به حساب کاربری، دوباره تلاش کنید</string>
    <string name="errorInRegister">خطا در ثبت نام!</string>
    <string name="anErrorHappendInServerConnection">در ارتباط با سرور خطایی رخ داده است، لطفا دوباره تلاش کنید.</string>
    <string name="errorInDataReceiving">خطا در دریافت اطلاعات!</string>
    <string name="errorInUpdatingProfile">خطا در بروزرسانی اطلاعات کاربری!، دوباره تلاش کنید.</string>
    <string name="errorHappendInReceivingData">در دریافت اطلاعات خطایی رخ داده است، دوباره تلاش کنید.</string>
    <string name="retry">تلاش مجدد</string>
    <string name="cancel">انصراف</string>
    <string name="etkaChainStores">فروشگاه های زنجیره ای اتکا</string>
    <string name="customersLoyaltyApplication">اپلیکیشن باشگاه مشتریان</string>
    <string name="inLoadingUserProfile">در حال دریافت اطلاعات کاربری...</string>
    <string name="inUpdatingUserProfile">در حال بروزرسانی اطلاعات کاربری...</string>
    <string name="inLoadingProductInfo">در حال دریافت اطلاعات محصول...</string>
    <string name="inLoadingStoreInfo">در حال دریافت اطلاعات فروشگاه...</string>
    <string name="thereIsNotResultAvailable">برای این قسمت نتیجه ای موجود نیست</string>
    <string name="back">بازگشت</string>
    <string name="commingSoonMessage">این قسمت در نسخه های بعدی تکمیل خواهد شد.</string>
    <string name="inLoadingUserProfileInfo">در حال دریافت اطلاعات کاربری...</string>
    <string name="male">آقا</string>
    <string name="female">خانم</string>
    <string name="writeSomeThingsToSearch">ابتدا عبارتی برای جستجو بنویسید!</string>
    <string name="yourSearchHasNotResult">برای جستجوی شما نتیجه ای پیدا نشد!</string>
    <string name="exit">خروج</string>
    <string name="closeApp">بستن برنامه!</string>
    <string name="areYouSureToExit">آیا قصد خروج از برنامه را دارید؟!</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="detailIsNotAvailable">اطلاعات تکمیلی وجود ندارد.</string>
    <string name="productOverallDescriptionTitle">توضیحات کلی محصول:</string>
    <string name="productNotFound">محصول مورد نظر پیدا نشد!</string>
    <string name="error">خطا</string>
    <string name="errorInLoadProduct">خطا در دریافت اطلاعات محصول، دوباره تلاش کنید</string>
    <string name="etkaStoreBranchXAddressX" formatted="false">فروشگاه اتکا شعبه %s ،موقعیت نقشه: %s</string>
    <string name="shareUsing">اشتراک گذاری با استفاده از:</string>
    <string name="newTicket">درخواست جدید</string>
    <string name="submitNewTicket">ثبت درخواست جدید</string>
    <string name="title">عنوان</string>
    <string name="requestText">متن درخواست</string>
    <string name="profileUpdatedSuccessfully">اطلاعات کاربری با موفقیت بروزرسانی شد.</string>
    <string name="update">بروزرسانی</string>
    <string name="updateMessage">برای استفاده از اپلیکیشن ابتدا باید بروزرسانی انجام دهید.</string>
    <string name="discountedPriceX">قیمت با تخفیف: %s</string>
    <string name="unitPriceX">قیمت واحد: %s</string>
    <string name="distributionX">توزیع: %s</string>
    <string name="distributionCenters">مراکز عرضه</string>
    <string name="selectStore">انتخاب فروشگاه</string>
    <string name="writeCityNameOrStoreName">نام شهر یا فروشگاه را بنویسید...</string>
    <string name="thereIsNoInformationForThisProduct">هیچ اطلاعاتی برای این محصول وجود ندارد!</string>
    <string name="Xtoman">%s تومان</string>
    <string name="cameraPermissionRationalMessage">برای استفاده از این قسمت، ابتدا نیاز به دسترسی به دوربین وجود دارد.</string>
    <string name="locationPermissionRationalMessage">برای استفاده از این قسمت، نیاز به دسترسی به سرویس مکان یابی وجود دارد.</string>
    <string name="continue_">ادامه</string>
    <string name="survey">نظرسنجی</string>
    <string name="hekmatCard16digitNumber">شماره ۱۶ رقمی حکمت کارت</string>
    <string name="hekmatCardPassword">رمز عبور درگاه حکمت</string>
    <string name="hekmatCardPasswordWarningMessage">کاربر گرامی، رمز عبور درگاه با رمز کارت و رمز کیوسک متفاوت است</string>
    <string name="hekmatCardPort">درگاه حکمت همراه فروشگاه</string>
    <string name="instoreModeView">حالت درون فروشگاه</string>
    <string name="offers">فروش‌ویژه</string>
</resources>