<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/textSizeMedium"
            android:text="@string/resetPassword"
            android:textColor="@color/black"
            android:paddingBottom="8dp"/>


        <LinearLayout
            android:id="@+id/customerClubCardNumberInputHolder"
            style="@style/editTextHolderStyle">

            <EditText
                android:id="@+id/customerClubCardNumberInput"
                style="@style/editTextStyle"
                android:hint="@string/custumerClubCardNumber"/>

            <View style="@style/grayLineStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobilePhoneInputHolder"
            style="@style/editTextHolderStyle">

            <EditText
                android:id="@+id/mobilePhoneInput"
                style="@style/editTextStyle"
                android:hint="@string/mobilePhoneNumber"/>

            <View style="@style/grayLineStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailInputHoler"
            style="@style/editTextHolderStyle">

            <EditText
                android:id="@+id/emailAddressInput"
                style="@style/editTextStyle"
                android:hint="@string/yourEmailAddress"/>

            <View style="@style/grayLineStyle"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sendButton"
                style="@style/textButtonStyle"
                android:layout_alignParentLeft="true"
                android:text="@string/send" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>