<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/commonLayoutRootStyle">

    <ir.etkastores.app.UI.Views.EtkaToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/otherPages" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ir.etkastores.app.UI.Views.CustomRowMenuItem
                        android:id="@+id/termAndConditionsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:rowText="@string/termAndConditions" />

                    <View style="@style/lightDividerMatchWidthStyle"/>

                    <ir.etkastores.app.UI.Views.CustomRowMenuItem
                        android:id="@+id/userPrivacyButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:rowText="@string/userPrivacy" />

                    <View style="@style/lightDividerMatchWidthStyle"/>

                    <ir.etkastores.app.UI.Views.CustomRowMenuItem
                        android:id="@+id/aboutEtkaStoresButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:rowText="@string/aboutEtkaStores" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/textSizeSmall"
                android:textColor="@color/darkGray"
                android:layout_margin="8dp"
                android:text="@string/otherPagesFooterLicense" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/textSizeSmall"
                android:textColor="@color/darkGray"
                android:text="@string/copyrightEn"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
