<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/hekmatCardPort"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/textSizeMedium" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/hekmatCardNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/hekmatCard16digitNumber"
            android:inputType="numberSigned"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/textSizeSmall"
            app:backgroundTint="@color/gray" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/hekmatCardPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/hekmatCardPassword"
            android:inputType="textPassword"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/textSizeSmall"
            app:backgroundTint="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hekmatCardPasswordWarningMessage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/enterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rect_rounded_theme_white_bg"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="3dp"
            android:text="@string/enter"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSizeMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/register"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/textSizeSmall" />

            <TextView
                android:id="@+id/resetPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/haveNotPortPassword"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/textSizeSmall" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>