<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.InStoreModeActivity">

    <ir.etkastores.app.ui.views.EtkaToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBack="true"
        app:title="@string/instoreModeView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:weightSum="3">

        <TextView
            android:id="@+id/inStoreMapButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/inStoreMap"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/inStoreSurveyButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/survey"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/inStoreOffersButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/offers"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/circularProgressStyle" />

    </RelativeLayout>

</LinearLayout>